# lfsweaver

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  upstream-watch.yml
compat/jhalfs/: README.md
docs/: architecture.md  licensing.md  reference-parity.md  support-matrix.md  upstream-lifecycle.md  verification.md
evidence/: README.md  support.json
examples/: lfs-12.4-sysv-i386.toml  lfs-13.0-rke2-node.toml  lfs-13.0-systemd-x86_64.toml
schemas/: manifest.schema.json  provider.schema.json
scripts/: check_upstream.py  validate_examples.py
src/lfsweaver/: __init__.py  cli.py  constants.py  doctor.py  evidence.py  manifest.py  plan.py  upstream.py
templates/: README.md
templates/executors/: docker.toml  remote-ssh.toml
templates/install/: blank-disk.toml  remote-machine.toml
templates/profiles/: desktop.toml  gaming.toml  k3s-node.toml  minimal.toml  multilib.toml  rke2-node.toml  server.toml  supplemental.toml
templates/targets/: iso.toml  k3s.toml  oci.toml  raw.toml  rke2.toml  rootfs.toml
tests/: test_cli.py  test_evidence.py  test_manifest.py  test_plan.py  test_upstream.py
upstreams/: registry.toml
